Settings: Remove inputs.ui, code the whole UI in C++. Use layouts instead of hard-coding the UI. Add support for ZL, ZR and C-Pad. Let each lineEdit hold a reference to the temp_settings struct.

--- a/src/citra_qt/main.ui
+++ b/src/citra_qt/main.ui
@@ -159,17 +159,17 @@
     <string>Configure ...</string>
    </property>
   </action>
+  <action name="action_Inputs">
+   <property name="text">
+    <string>Configure &amp;Controls</string>
+   </property>
+  </action>
   <action name="actionDisplay_widget_title_bars">
    <property name="checkable">
     <bool>true</bool>
    </property>
    <property name="text">
     <string>Display Dock Widget Headers</string>
-   </property>
-  </action>
-  <action name="action_Inputs">
-   <property name="text">
-    <string>Configure &amp;Inputs</string>
    </property>
   </action>
  </widget>
